# roomrubikspack-0.1.0-Public

./: .gitignore  LICENSE  README.md  output_layout.dxf  output_layout.json  pyproject.toml
examples/: example_usage.ipynb  example_usage.py
src/roomrubikspack/: __init__.py  types.py
src/roomrubikspack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/roomrubikspack/core/: __init__.py  adjuster.py  attached_room_placer.py  domain_subtractor.py  elitist_genetic_algorithm.py  generator.py  layout_generator.py  place_child.py
src/roomrubikspack/generators/: __init__.py  dimension_generator.py
src/roomrubikspack/utils/: __init__.py  collision.py  constraints.py  correction_utils.py  geometry.py  graph_utils.py  physics.py  vastu.py
