[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roomrubikspack"
version = "0.1.3"
authors = [
    { name = "Vijesh Kumar V", email = "your.email@example.com" }
]
description = "Client wrapper for procedural architectural floorplan layout generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["architecture", "floorplan", "layout", "genetic-algorithm", "CAD", "procedural"]
dependencies = [
    "requests>=2.25.0",    # Server REST API communication
    "matplotlib>=3.5.0",   # showlayout() and connectivityshow() visualisation
    "networkx>=2.6.0",     # connectivityshow() network graph drawing
    "ezdxf>=1.0.0"         # exportlayout() DXF export
]

[project.urls]
Homepage = "https://github.com/architectvijeshkumarv/roomrubikspack-0.1.0-Public"
"Bug Tracker" = "https://github.com/architectvijeshkumarv/roomrubikspack-0.1.0-Public/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",         # Test runner
    "pytest-cov>=4.0",     # Coverage reporting
]

[tool.setuptools.packages.find]
where = ["src"]            # src layout: package root is src/

[tool.pytest.ini_options]
testpaths = ["tests"]
